technitium/20-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  namespace: technitium
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.99.5.100,10.99.5.101
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: technitium
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
