technitium/22-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-headless
  namespace: technitium
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: technitium
  ports:
    - name: web
      port: 5380
      protocol: TCP
      targetPort: 5380
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
