technitium/62-service-dnscrypt-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnscrypt-proxy
  namespace: technitium
spec:
  type: ClusterIP
  clusterIP: 10.43.6.253
  selector:
    app: dnscrypt-proxy
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
