technitium/70-networkpolicy.sops.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-deny
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:IIpeuyTtFg==,iv:PIMlvFU1ASuErbzg085fQqcKHvNPiEEuYEProPAHtZw=,tag:pZXIAXYwujxNCyiothsv4w==,type:str]
        - ENC[AES256_GCM,data:1kqt9oMB,iv:j5YBYXwpOo9znTL/8doY4YsL6Ohd878sUyN797zdw4g=,tag:KU4GSUgz2UYgmO3YdrlYQg==,type:str]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-intra-namespace
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:UtR50MLtNQ==,iv:nI1yct2A+I5nYk9qXEYsi5QTTjvGUYlTKpmXwABUpbM=,tag:gYJMQFzH9+IFQUYW6p23lA==,type:str]
        - ENC[AES256_GCM,data:m4PJjfUA,iv:IhrUz/xQWgGwUILh+epaqbcI5kdQ6XuYW+PP+RPAOmI=,tag:qAPUPN9kdJT0WtnkytUlAA==,type:str]
    ingress:
        - from:
            - podSelector: {}
    egress:
        - to:
            - podSelector: {}
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-coredns
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:nWnVLraE,iv:5DVlahZFHQnrevhtfNbo5ys1eTzKZ78OJqcDmN5X/2c=,tag:ha7hrlnGLRa2FW1psGwTTw==,type:str]
    egress:
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:goFRHQ6HT5HaEhM=,iv:XZ/4VphupltEot9HYrDKQGA6/MQv8WRI3xrq5nBIlm8=,tag:kXdW0zFQ1tonQuGowOnDBg==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:87Mk,iv:6s5W0+AN41pzIkoLaHvL86WhgdoIG/vi1FIeNOEhq1M=,tag:yJwFTTmjJQ4UQWgq2d44Lw==,type:str]
              port: ENC[AES256_GCM,data:LXY=,iv:EuPPQzko1BfOnZJxqECnGlP5c13zTgOFimOH0OqZ7cI=,tag:CzQCc6SYUITHgtbIFA963Q==,type:int]
            - protocol: ENC[AES256_GCM,data:cnEs,iv:ksu8a5TFhTCI10+nfnNqzXnFB/rD9lgb5HmMd0DvCYg=,tag:JKX4TisNphs261RiZd3m1g==,type:str]
              port: ENC[AES256_GCM,data:kIU=,iv:gQNdMhJHqmQobj21iASI3xcx5052pqRKQBeduseHpCc=,tag:aQQ7G3rpgpoMItfk5C7TnA==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-kube-apiserver
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:BaqHHraq,iv:rindUXalnSmi6iJM2SE+bHtjvnQRjuOxpBjobZ07xqM=,tag:7/jMQ8SjI0GjUV9bmhVhJA==,type:str]
    egress:
        - to:
            - ipBlock:
                cidr: ENC[AES256_GCM,data:YWu4siVi4mjf94h5Cg==,iv:WTf5zxBolATtdFDBBnYjaYqwRAekoGHDjLFVGO207vM=,tag:0DO1U1PXYPsNZG5w3BMMFw==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:MOCn,iv:w/7pxdbq4u94v38ZWB+f0pGPFhcXgHBF9GWJkFs0uGQ=,tag:Nunv9fpnNQlupX9gUZNHDg==,type:str]
              port: ENC[AES256_GCM,data:/1ZsGA==,iv:bthYl8r97H2SqTspoUbvrt+8wjfxghgdZcg0KJbHjXg=,tag:7lNtWyMmxNwEgYfQBW+oCQ==,type:int]
        - to:
            - ipBlock:
                cidr: ENC[AES256_GCM,data:00Yp8+KV4uSpLNKs,iv:uQP6fkdpGmBoEjlmZ9sbwShoyrzrAOnxRWshoYhSC3w=,tag:w3T44jzKWkomwD7loWauhA==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:msYg,iv:cPoLXQsyqnSaAKzqQLhjoBP2HuGi05Vcuru9YAn+4zg=,tag:sNs2yOuoc4lotyfYFZ6QWA==,type:str]
              port: ENC[AES256_GCM,data:tYqK,iv:1feGb84CnEH1FFjnHGU3EgMEpKEUmK56W5y0Xgz3SbM=,tag:xJZbP98uPtlPlj8fdeNozQ==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-authentik
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:h8jahyX6JeLg0g==,iv:cgP8Dh0mCXUOA11b5Kftr4prD2A/PbMQ4gV8fmMoTfg=,tag:qEYgKZGRlGUs3bGgYpQzsA==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:Dhk5R47n,iv:oZDHfSoIvDKPITR36X4HLXefYqBKRQmZ9i73oiouVxo=,tag:rP8GqgyrEDBptLe2IvAhcQ==,type:str]
    egress:
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:/caM6DFDxtRA,iv:xnoHsiWbppKTL26kiNDRk/lGHujw96nI1kE+2FMCrOY=,tag:Imn0FY3nhK9FHAObtjgOtg==,type:str]
              podSelector:
                matchLabels:
                    app.kubernetes.io/name: ENC[AES256_GCM,data:UppdV3txciZz,iv:8W7j/+biCYoBADaYBsgjUlVr90UhkwZyYJpgaHDhuIc=,tag:OjXjvhDyocBY7lwiLxEuhw==,type:str]
                    app.kubernetes.io/component: ENC[AES256_GCM,data:3/hfTHVf,iv:zBphRRkWlDQQYHjDR2Ek4uzWYmDskRz3uwHobGJjxNo=,tag:xBO7qEpki9n5y/Ox5UB7cA==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:OSOb,iv:8SW4sY82QWGABz28goERWqcEdTpF5hMaaueQ7mV0GJI=,tag:E4QEUp5yhzme+jsyAeGCCw==,type:str]
              port: ENC[AES256_GCM,data:wm4=,iv:24fkSSG4V4eATjBUxziM63ZCDQNyctOk+B0mnbOhrGY=,tag:qPAi6zziRodd4Eryy/8JRQ==,type:int]
            - protocol: ENC[AES256_GCM,data:tAZj,iv:v5lfnKPcr8xMcYu6mHcikMu0q6iNs21Ps4QnbI4gngk=,tag:I3sk+CLYSzckJoxf5IUFpA==,type:str]
              port: ENC[AES256_GCM,data:HMHe2g==,iv:5r05xTDZkJLQ0+hN5C4e5CekCTCO9Z+6ZfDd72dtTdU=,tag:4wZucsCsgTVdK+/CL1SA/g==,type:int]
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:5atYxWJzxypJnDvCZKYmqw8zekA=,iv:LWDxVlN2NMv47/uTVyhtWfmiDc0QFKkC5M0eFRHTqnA=,tag:b14mMzcOodFf+kurjTNCYw==,type:str]
              podSelector:
                matchLabels:
                    app.kubernetes.io/name: ENC[AES256_GCM,data:yBe/bp0=,iv:+b7dhNmYYrVhukhIAnE+DRWgNtFU4AKgqaIORRtpGUg=,tag:Co+P8vnPY/Q6udIpy6EsAQ==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:tmgn,iv:+41XlSdr9zhcVuUSTgdwEKwYl3NX/OVVisvWFHbJEac=,tag:PfhGZNQNtcddll1WG1sTLw==,type:str]
              port: ENC[AES256_GCM,data:E+jkdBM=,iv:Bz+xTAQqWXlYQ5K8v07J5RxgWVtNZzkIBgiAvqHZIkg=,tag:V67Qs7OCABMuq+4AuI/9dQ==,type:int]
            - protocol: ENC[AES256_GCM,data:9Wjd,iv:zD8qHV3xQcl/p+Fdu6DVyDtXsESzR4D4j9pEr05CnRk=,tag:inYPOPqETuFyqPdio2o2Lw==,type:str]
              port: ENC[AES256_GCM,data:+zWrmjI=,iv:M07zSs52mpyP8G9vLQXuECtTlIdDlib/RhKOrzoopgc=,tag:W/0ZQ9iCw7iJwfV1bBHMUQ==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-dnscrypt-to-vpn-proxy
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:8PNW5bfzxm5EhcrbuCg=,iv:EzLX0y2dIva1NkIPl/HtTDD+DesiFy2cCq5ygLnIMWQ=,tag:TDGVBm38QaBDeWIfb256Ng==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:D5CjWt6q,iv:+k9sz23k3Lc5MTOw29e/t2cthgfWFytRL5btAbjNz5s=,tag:aw+b5GrZRGitcEQPJTg6jw==,type:str]
    egress:
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:XqHrjyg=,iv:w1r7mYbYE7NEt9BMqrz8+tn7gapD/oaknqKvs/u4DF4=,tag:H9pdrpSTqTfqr9M8tjYxRA==,type:str]
              podSelector:
                matchLabels:
                    app: ENC[AES256_GCM,data:2kyY8/d72KQd,iv:eTObHlSTjsM65aL4rPaxpWBs4S7xVAymsja43828Gz4=,tag:1FeDRkxTiK/vdap6SjPNhQ==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:brZp,iv:Wls8kLcC+InDcrUd8538lBDH6l+Und1p4j8XKlLaFIs=,tag:DITOZVhqMz5j2JXRgGJu4A==,type:str]
              port: ENC[AES256_GCM,data:0QUiuQ==,iv:Fao1c+Wg2bIkyiK1V/nsboumJMg2Q2trvpy+HR+bAyg=,tag:Y1tRafS51adhAnEKTE72Lw==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-technitium-to-vpn-proxy
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:0xSep+MYw1fEHA==,iv:zx9nGHGG5NiXd0oWB4wTwk/RiabH03W34WgGf/dciKU=,tag:PKtGqB64zzfnkxoczjh+VQ==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:mu/RQHSq,iv:he7kpVxOmgmC6A1mcWPLH4PdIpjQIn0HNXHy/SgmAl8=,tag:V4bzRx5j+mUIdtPC+vdAVQ==,type:str]
    egress:
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:8SHTgi0=,iv:5TCOzxdIsOxJ84RUc4c6EWOTD4AB3Kb4Z/eF4CvyQpM=,tag:caZdlDiNpbhJWhkkuUH6Rg==,type:str]
              podSelector:
                matchLabels:
                    app: ENC[AES256_GCM,data:fgZjoHvjYl5n,iv:jdxDkw9UaRLXMl91of8/Er77jKjoRxdLEVTl30rR9GY=,tag:DkKPKPKd8mAH9bx9Ebbigw==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:gdAS,iv:ChPOIMVpbL+tFNiEN+oAbBTPSsv+/3WVQccWC/KCAdw=,tag:gBLhf4XRdNuGLo6BHibJVw==,type:str]
              port: ENC[AES256_GCM,data:tSk6tQ==,iv:+HGzmuaFBCuzYBdjcwTKfL2a9EmqJsE22ZwLz1QZ2ko=,tag:8UG48eitZcYFB7KSOdpEsA==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-ingress-dns
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:Ay4RpRGYr7q3lw==,iv:SOWz4jk3JdK/l9CERFpLsxpXAFm67ipmnhqXoTzbLlc=,tag:wnl0iTb2RDhieRunwb7aoQ==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:TpeeM6/JQw==,iv:DajmMN7unevfSJmf38raOKLtrnGV7xjKQXDpXFLJn7Q=,tag:It03Mn3rwMmeXvDHBNW/MQ==,type:str]
    ingress:
        - from:
            - namespaceSelector: {}
            - ipBlock:
                cidr: ENC[AES256_GCM,data:1sKPVcp3iDaOH3V7,iv:ZQVIiIYLDbvEqBKomy0jwbwOQch7T1i+VRrPyfpaGng=,tag:HlCzi/7OR11pJiGk3KqSqw==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:KS/d5utTVlK9D/Ti,iv:dp4LZvIe+nNV/G6JVc43fsmQ5eGfdyf9fj+sVzwHquU=,tag:VVCQRKuIuHROUQRSBcgvFg==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:YSlt5ze4W7GX5Hc7owU=,iv:QeLkM2GFOmcNia0bKvHLrjgiYAZ2vC82TZxNOFo+r+o=,tag:SkotX3PbIM9F2W91j0dNTA==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:w47UG3pqe+MXn8zrJw==,iv:FNZvCaXkOUrcw9Vnn0D80EFu93O1VoWu9iyS+ZD3trs=,tag:rAbLN8uRvmeWAXnd5RN9rA==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:Ic5B3+X5EoOEqcGNRw==,iv:SJ4Kp1RxRyODmqgzk46pSOBzKLOjwYO1P5WLXYNmlqk=,tag:uV1Fya+Co6z5Atyhmw5RHQ==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:zsLf3scwNMTcNwf+qQ==,iv:yHpq6lQKFuoHNRYcT2mvyWF1qYhnfgk0L7r/xLiBXew=,tag:bObxZAqajBzQJXfJahmYGQ==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:R9hf8nrlpRnnBvNOwg==,iv:VtAwj2gZ3/63Jz+9eIhckKou4OxRieFdyDKoomGDe88=,tag:XltgJV7hbnyz9Ut5lZwjjA==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:JULT/Egb8d1l3ThPdnE=,iv:2IY1QAz8mvNQR2kUjd8PqX+aZUIbp0pet9Sr9wpWVZo=,tag:0uuuQE2h3BooGr4Q6HppGw==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:bNH8pSig0d+6UcIV3hA=,iv:AyEaCGtjOiQr8nTPJhGoH1beCVa8WME0piSEIBjKk64=,tag:wj9Y4TmjVaKxPnA6/fJKMw==,type:str]
            - ipBlock:
                cidr: ENC[AES256_GCM,data:NAoQ+ojQz0cx4eCCesY=,iv:7/ENdizjbLDC1gJV/GG6VGcrZrBDmfktk1pv87LUSfY=,tag:LPayfHtiEVVUPuSTKKQndA==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:5GB9,iv:LN80bHA+mDOg+9ORWVVWO7U+6ME6awjgYC1u4K3m4kg=,tag:SMDOyG+3ELQtSJD9BzCagA==,type:str]
              port: ENC[AES256_GCM,data:py4=,iv:Y1gjQEggSpl12k/e8k/BEJypRwMu814fCFfjOvxP/Pc=,tag:WS8ZUFOvT47Jt8o91ay5Zw==,type:int]
            - protocol: ENC[AES256_GCM,data:YFVn,iv:bp8TQsHGQZeNbLqlo3CB9KXGhNlScIScm/yuffRYGTg=,tag:/8HEATAsF1LSL0EO1tAWrQ==,type:str]
              port: ENC[AES256_GCM,data:bmY=,iv:J+zK3PYGj5lXq5HBZXF12WtC5v4ZPuLDWoYfBb4tKT8=,tag:lfZeqIqsGeN6b7HYKebhIA==,type:int]
            - protocol: ENC[AES256_GCM,data:2wmS,iv:dJcpSy/TIYpl/GBOC3LioSXZfyOn28x5TvGNkeuXz1A=,tag:ZppRuLPXSFDXdqpzc4b6RA==,type:str]
              port: ENC[AES256_GCM,data:sPuD,iv:VJOSj0iMdn8gJFQyCpFUIBXkXfgVMycx06RfCvUvnFM=,tag:5lWF4laezpjQPMqZFmeGoQ==,type:int]
            - protocol: ENC[AES256_GCM,data:8q1q,iv:EGX2YHh/lpwWNDOUTMQCY2hRssFY70+Y05ns1SLmgIE=,tag:G0fjZe12LwAQR272M+qajg==,type:str]
              port: ENC[AES256_GCM,data:cHtu,iv:k/3CJF9MRVCZHmkD/T+Qjsrphz6qigv2DhZkpsknGT8=,tag:/Au3Z5FakbMJTwdp2cWSfw==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-ingress-envoy
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:mAf6FkMdjRhtzA==,iv:uUttMqY61TnfugLuik7s1AaMit33UrE8x28z+nAI2do=,tag:e0Pqu/fHl4c5o22mb+H1oA==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:JvIiThcyQA==,iv:rORhDUDETSb7C+fI255twdRJAKbjFQVJKjHT4WAGCZI=,tag:4gG6HiPdUj+dCBIJj1WcgA==,type:str]
    ingress:
        - from:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:jiMy3hUHqXmYoMKuw4t8uBp2ivA=,iv:apC8fmiskPcJAGN/oSNNZpputG83bbwj2MofTItV7oY=,tag:fPz2nuCXKvfB0YZZLWmUzg==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:eG81,iv:3pAMXrkyWqNJNh6lP9G63K65PY1PuM4WzeVCXajbDoQ=,tag:8VMK+94tVO0vojZeON42/Q==,type:str]
              port: ENC[AES256_GCM,data:PXAyNA==,iv:/CMi8Q1pe3LQDJ+ekhTPpFQn5kNtBmMaknnfj60Zcak=,tag:aHXU590mauUBqds9e5FNbQ==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-ingress-authentik
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:L2byhjgIfn1oGw==,iv:pMJ+1ArQ8oyMKah5hZbpFSBqU6EFMp1Sp4NRG1mIIro=,tag:2ehjf0ddUvsFINn7vt7NKg==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:fZNRAMEJXQ==,iv:WhsCABkqghUIMsB74Fl4wro62Xq+C9CexkoLPHtmwbE=,tag:OUB7lxjDEOB0u7SNWhK5tw==,type:str]
    ingress:
        - from:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:x3d7nIWDdQhd,iv:79PAACEkU72jtDupZYcqdrAjXQvuZBZbdgBjktAjKSU=,tag:2/HInBb3tsc9Pu5CoJM7Sg==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:DlbY,iv:1LgdchgRsghsEjnQHpTjkUmMeGi0m/T36RsDMFn2UF8=,tag:+B4H4IAv0peDHDnvhdFarw==,type:str]
              port: ENC[AES256_GCM,data:kT8BzQ==,iv:0R232GsgJczTusXxkfkiHBJ8kFo56QXbPNVd7HdtSrU=,tag:P09LGMRQCbkp2DDJZ3OW7A==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-prometheus-scrape
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:vCYzdSRItg==,iv:t93B6dw/nWX8svAoUEdvq7aMHKBnXrk0ZC1qre6tSrA=,tag:X1NbkuKxrsuXRQCzqMsQ1w==,type:str]
    ingress:
        - from:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:VhPYpKfW2wQUfot0Og==,iv:ztZdIfBvJZ0uL06+BJbNgF+SYpBLhaJc0tbOTz2aZ20=,tag:QreggBUwkI909Bn29Ef/Lg==,type:str]
              podSelector:
                matchLabels:
                    app: ENC[AES256_GCM,data:ACuwd6lzU8ooaQ==,iv:MxHSxEFWhYgALWeBq3xj63Na/vCppEVtICP0OespQWo=,tag:Il0OklmaPhICOcFkTtmvLQ==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:/yWB,iv:gmTX9AmSHV0BD6chYWCrUkd4zC0xuGKlj5ZnAt1Tm1g=,tag:KVdMl8IZH3uX8/aoZ1yCNw==,type:str]
              port: ENC[AES256_GCM,data:6GRE5Q==,iv:LyZkUJjril8+ZaR1dIHEe7zBrUjnEHkpQIXn0ANmSU0=,tag:YPjuZqUPzq30q1fD9tikkQ==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-uptime-kuma
    namespace: technitium
spec:
    podSelector: {}
    policyTypes:
        - ENC[AES256_GCM,data:QjJQF5Ev6A==,iv:Lh23L/ps7H/2OBMwGIQvbX0noitfklh8i0w6z5mLMfo=,tag:T0idgvxhI8QgBRfmRBfwAw==,type:str]
    ingress:
        - from:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:rKMKnHmN5xQOjs4=,iv:n/jVL9taW9FM3hTpkU63KQuNwHrgNFmJ+XLjUHZs04g=,tag:mYFWJKPIo0DBtBOQx9RTQA==,type:str]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-unifi-sync
    namespace: technitium
spec:
    podSelector:
        matchLabels:
            app: ENC[AES256_GCM,data:NZLCQhYdWLtMJg==,iv:kVMPj0JiXYeWgNlGFTJDlulyYprs111ppORm1U8X7Zc=,tag:9/IWZAIJKKbSdw5EKK8x+w==,type:str]
    policyTypes:
        - ENC[AES256_GCM,data:27tMvSEe,iv:m6sywTCEquDVc+maxkhsy8+F1Rl+t0eiDjGo6obZxFI=,tag:rORERn87jm65fMQK5Gmlcg==,type:str]
    egress:
        - to:
            - ipBlock:
                cidr: ENC[AES256_GCM,data:/aKhV+p4nxRNjhD9,iv:VhBO27wDsuuxyD271ayFb+HeDWhP0xz2tXHRt0CU+j8=,tag:MDxhy5A1UPgpu2dG8OE3Mw==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:LpQL,iv:n8CTQ2f+RyrAFnFsCmx5zHwfIVncRLC1yrUX/6uGBkg=,tag:aU5zVJEHPnnR0pN0O7nbvg==,type:str]
              port: ENC[AES256_GCM,data:sg8S,iv:SkTEXuw+hIZE8B56Fr/ypY0QyvhpVjt/mEQT3jN4Rgs=,tag:iTeuVuIq83oJ4C0id3UD9Q==,type:int]
        - to:
            - namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: ENC[AES256_GCM,data:PDIOBKA=,iv:mf3wYWpgtvDumS9VUuC2Rqn1SPPA+CfCCzXW1RUViiQ=,tag:Pyc/svT911ZTwHzKc2zScg==,type:str]
              podSelector:
                matchLabels:
                    app: ENC[AES256_GCM,data:qqf5jmYO0cU0,iv:ojLwwfFBwpsiZM0+rCT9b/ZUzO1/p2qxUi/oqcdsU8E=,tag:OIICx70xhz9tlmEvFpSx7A==,type:str]
          ports:
            - protocol: ENC[AES256_GCM,data:6Dfx,iv:ClUL/YBFBTVChrHypTbDaZ1fgakTHNOFm+fF0zP17JY=,tag:Ydm+kUOWji4Zlsp7RA+/3A==,type:str]
              port: ENC[AES256_GCM,data:rb2fCg==,iv:H+0ps9IzQl4Cinna/3ys0DbZreZNzr49Vs7ac7/NvtI=,tag:4TT6u01oGOf4q06ay6sp3Q==,type:int]
sops:
    age:
        - recipient: age16krjysalsq26mfndnthd9r42thapj43a0zdndgrrz30utzuhwd0q7fxh9p
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWlkZ05WWndSWkxYSXpI
[...]
            uQsXRePWR2IgttUPJKpND/byf1gUK63ixY3QSF169vscK9CrRWZ6XA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-17T03:54:42Z"
    mac: ENC[AES256_GCM,data:PefaF29RC8jpOuydAzvqmivRXUzyDkqZ7ZhnU/mIpBXrFRCkD+Q0YuVTxdvX7cDbcH0G/UYqLKkQI6WezaE/Iz1gBntZ12wIJ6zlCoOnfqIU4wK330EMYsLSkTDXBep0I/+xjKEX/7lYtX5m+CipM10dj/Qm4qrhKN4WCUx3qu4=,iv:S5RxXjPoscu5ZLWQMF8JVUwbSQsmcLpexWfd2rJa3fk=,tag:hCsBQpmsoWa+E53NgjxEjg==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.10.2
